samples/_failures_safe/1761242562_99b9c3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e5fdfad0.c: In function ‘main’:
./samples/SAFE/__tmp_e5fdfad0.c:139:5: error: expected expression at end of input
  139 |     if (decompressed_size >
      |     ^~
./samples/SAFE/__tmp_e5fdfad0.c:139:5: error: expected declaration or statement at end of input
